# android-tui-music-player

./: Cargo.toml
.github/workflows/: build.yml
src/: lib.rs  main.rs
