[package]
name = "tui_player"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
rodio = "0.17"
android-activity = { version = "0.5", features = ["native-activity"] }

[package.metadata.android]
package = "com.future.tuiplayer"
label = "Future TUI"
target_sdk_version = 30
min_sdk_version = 21
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]
